--- a/day 1/moovies.css
+++ b/day 1/moovies.css
@@ -93,7 +93,7 @@ input::placeholder{
   gap: 20px;
   background-image: linear-gradient(90deg, rgba(75, 32, 104, 0.6), rgba(120, 122, 255, 0.7)), url(images/movies/mov1.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: top 25% right 0;
   background-repeat: no-repeat;
   margin-bottom: 50px;
 }
@@ -155,11 +155,13 @@ input::placeholder{
 
 .content .movies{
   width: 100%;
+  margin-top: 30px;
 }
 
 .content .movies a{
   text-decoration: none;
   color: black;
+  font-size: 30px;
 }
 
 .content .movies h2{
@@ -174,13 +176,12 @@ input::placeholder{
 
 .content .movies .movie-list{
   width: 100%;
- display: flex;
- justify-content: space-between;
- align-items: center;
- flex-wrap: wrap;
- gap: 15px;
- padding: 10px 20px 10px 20px;
- font-size: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 10px 20px 10px 20px;
 }
 
 .content .movies .movie-list .movie{
@@ -204,14 +205,26 @@ input::placeholder{
   object-fit: cover;
 }
 
+.content .movies .movie-list p{
+  font-family: "Exo 2", sans-serif;
+  font-size: 10px;
+  font-weight: 800;
+}
+
+
 .content .series{
   width: 100%;
-  margin-top: 40px;
+  margin-top: 80px;
+}
+
+.content .tv-series{
+  margin-top: 20px;
 }
 
 .content .series a{
   text-decoration: none;
   color: black;
+  font-size: 30px;
 }
 
 .content .series h2{
@@ -232,10 +245,10 @@ input::placeholder{
 .content .series .series-list{
   width: 100%;
  display: flex;
- justify-content: space-between;
+ justify-content: center;
  align-items: center;
  flex-wrap: wrap;
- gap: 15px;
+ gap: 20px;
  padding: 10px 20px 10px 20px;
  font-size: 12px;
 }
@@ -256,14 +269,24 @@ input::placeholder{
   object-fit: cover;
 }
 
+.content .series .series-list p{
+  font-family: "Exo 2", sans-serif;
+  font-weight: 800;
+}
+
 .content .anime{
   width: 100%;
-  margin-top: 40px;
+  margin-top: 80px;
+}
+
+.content .ani{
+  margin-top: 20px;
 }
 
 .content .anime a{
   text-decoration: none;
   color: black;
+  font-size: 30px;
 }
 
 .content .anime h2{
@@ -284,10 +307,10 @@ input::placeholder{
 .content .anime .anime-list{
   width: 100%;
  display: flex;
- justify-content: space-between;
+ justify-content: center;
  align-items: center;
  flex-wrap: wrap;
- gap: 15px;
+ gap: 20px;
  padding: 10px 20px 10px 20px;
  font-size: 12px;
 }
@@ -306,6 +329,11 @@ input::placeholder{
   height: 230px;
   border-radius: 5px;
   object-fit: cover;
+}
+
+.content .anime .anime-list p{
+  font-family: "Exo 2", sans-serif;
+  font-weight: 800;
 }
 
 .news{
@@ -354,4 +382,171 @@ input::placeholder{
 
 .news .letter .form button:hover{
   background-color: #004bbd;
+}
+
+/* information page */
+
+.info{
+  width: 100%;
+  padding: 50px 25px 40px 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.info .movie-info{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.info .movie-info .movie-img{
+  width: 70%;
+}
+
+.info .movie-info .movie-img img{
+  width: 100%;
+}
+
+.info .movie-info .movie-descript{
+  width: 70%;
+  padding-top: 5px;
+}
+
+.info .movie-info .movie-descript h2{
+  font-size: 35px;
+}
+
+.info .movie-info .movie-descript p{
+  font-family: "Exo 2", sans-serif;
+  font-weight: 700;
+  padding-top: 13px;
+}
+
+.info .movie-info .download-movie{
+  width: 50%;
+  padding-top: 10px;
+}
+
+.info .movie-info .download-movie button{
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  border-radius: 10px;
+  border: none;
+  background-color: blue;
+  font-family: "Luckiest Guy", cursive;
+  color: white;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+
+.info .movie-info .download-movie button:hover{
+  background-color: #3584fc;
+}
+
+.info .movie-info .recomended-movies{
+  width: 100%;
+  margin-top: 50px;
+}
+
+.info .movie-info .recomended-movies .rec-movies{
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.info .movie-info .recomended-movies .rec-movies .rec-movie-list{
+  cursor: pointer;
+}
+
+.info .movie-info .recomended-movies .rec-movies img{
+  width: 100%;
+  border-radius: 10px;
+}
+
+
+@media (max-width: 400px) {
+  .options{
+    display: none;
+  }
+
+  .options ul{
+    flex-direction: column;
+  }
+
+  .header {
+    padding: 20px 20px 20px 20px;
+  }
+
+  .header .logo {
+    font-size: 20px;
+  }
+
+  .header .search{
+    display: none;
+  }
+
+  .hero {
+    width: 100%;
+    padding: 40px 25px 50px 25px;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+
+  .hero #logo {
+    font-size: 25px;
+  }
+
+  .hero .info {
+    font-size: 15px;
+  }
+
+  .hero #search input {
+    width: 100%;
+    padding: 15px;
+  }
+
+  .hero #search input::placeholder{
+    font-size: 13px;
+  }
+
+  .hero #search {
+    width: 100%;
+  }
+
+  .content {
+    padding: 30px 20px 30px 20px;
+  }
+
+  .content .movies a {
+    font-size: 15px;
+  }
+
+  .content .series a {
+    font-size: 15px;
+  }
+
+  .content .anime a {
+    font-size: 15px;
+  }
+
+  .news {
+    padding: 30px 20px 30px 20px;
+  }
+
+  .news .letter p {
+    font-size: 20px;
+  }
+
+  .news .letter {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .news .letter .form {
+    width: 100%;
+  }
 }
